# codex-slot-relay

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  relay-config.example.json  relay.py
docs/: ARCHITECTURE.md  CODEX_UTILS.md  DEPENDENCY_MAP.md  OPERATOR_GUIDE.md  QUICKSTART.md
examples/: codex_api_compat_test.py  codex_terminal_stream.py  codex_termux_ok.py  local_pairing.sh  quickstart_codex_utils.py  test_public_chat.py
systemd/: codex-slot-relay.service
