[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-slot-relay"
version = "0.2.0"
description = "Stateless OpenAI-compatible Codex relay with slot-aware routing and local slot management."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Indra Yuda" }
]
keywords = ["codex", "relay", "openai-compatible", "sse", "oauth", "routing", "multi-account"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
codex-slot-relay = "relay:main"

[tool.setuptools]
py-modules = ["relay"]
